--- a/misk/src/app/components/nav/nav.component.css
+++ b/misk/src/app/components/nav/nav.component.css
@@ -3,7 +3,7 @@
   left: 0;
   right: 0;
   color: #3a3133;
-  background-color: #fceeea;
+  background-color: rgb(255, 234, 229);
   margin-bottom: 0;
   box-shadow: none;
   display: flex;
